--- a/index.html
+++ b/index.html
@@ -476,12 +476,12 @@
   <div class="challenge-overlay" id="challenge500kOverlay">
     <div class="challenge-modal">
       <div class="challenge-header">
-        <div class="challenge-title">CHALLENGE 3</div>
+        <div class="challenge-title">CHALLENGE 2</div>
         <button class="challenge-close" id="challenge500kCloseBtn">✕</button>
       </div>
       <div class="challenge-body">
         <div class="challenge-text">
-          Making a tuff in a subway.
+          Making a party in a subway 🪩.
         </div>
         <div style="margin-top:6px;display:flex;justify-content:center;">
           <img src="challenge3-500k.gif" alt="Challenge 3 - Making a tuff in a subway"
