--- a/index.html
+++ b/index.html
@@ -360,17 +360,17 @@
         <button class="about-close" id="aboutCloseBtn">✕</button>
       </div>
       <div class="about-content">
-        <p>This token is not just a crypto project — it’s a 24/7 live experience.</p>
+        <p>This token is not just a crypto project — it's a 24/7 live experience.</p>
         <p>We are launching a non-stop livestream, running 24 hours a day, where the community directly shapes what happens next. At every new market cap milestone, a brand-new challenge is unlocked. And the higher the market cap grows, the crazier, bolder, and more unforgettable the challenges become.</p>
         <p>Expect never-seen-before challenges, massive giveaways, and surprise guest appearances. Everything happens live, in France, with one goal: to create an iconic, legendary, and memorable live event powered by the community.</p>
-        <p>A portion of the project’s reward fees will be:<br>
+        <p>A portion of the project's reward fees will be:<br>
         • Redistributed through giveaways<br>
         • Used for buybacks &amp; burns<br>
         • Invested into boosts to fuel growth and momentum</p>
         <p>This is more than a token.<br>
         This is a live show.<br>
         This is community-driven chaos.<br>
-        This is an experience you don’t want to miss.</p>
+        This is an experience you don't want to miss.</p>
       </div>
     </div>
   </div>
@@ -481,10 +481,105 @@
       </div>
       <div class="challenge-body">
         <div class="challenge-text">
-          Making a party in a subway 🪩.
+          CHALLENGE 2: Fake McDonald's employee 🍔
         </div>
         <div style="margin-top:6px;display:flex;justify-content:center;">
-          <img src="challenge3-500k.gif" alt="Challenge 3 - Making a tuff in a subway"
+          <img src="challenge2-500k.gif" alt="Challenge 2 - Fake McDonald's employee"
+               style="max-width:100%;border-radius:12px;">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 800K Challenge -->
+  <div class="challenge-overlay" id="challenge800kOverlay">
+    <div class="challenge-modal">
+      <div class="challenge-header">
+        <div class="challenge-title">CHALLENGE 3</div>
+        <button class="challenge-close" id="challenge800kCloseBtn">✕</button>
+      </div>
+      <div class="challenge-body">
+        <div class="challenge-text">
+          Explosif cocktail 🍹💥
+        </div>
+        <div style="margin-top:6px;display:flex;justify-content:center;">
+          <img src="challenge3-800k.gif" alt="Challenge 3 - Explosif cocktail"
+               style="max-width:100%;border-radius:12px;">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 1M Challenge -->
+  <div class="challenge-overlay" id="challenge1mOverlay">
+    <div class="challenge-modal">
+      <div class="challenge-header">
+        <div class="challenge-title">CHALLENGE 4</div>
+        <button class="challenge-close" id="challenge1mCloseBtn">✕</button>
+      </div>
+      <div class="challenge-body">
+        <div class="challenge-text">
+          CHALLENGE 4: Making a party in a subway 🪩
+        </div>
+        <div style="margin-top:6px;display:flex;justify-content:center;">
+          <img src="challenge4-1M.gif" alt="Challenge 4 - Making a party in a subway"
+               style="max-width:100%;border-radius:12px;">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 2M Challenge -->
+  <div class="challenge-overlay" id="challenge2mOverlay">
+    <div class="challenge-modal">
+      <div class="challenge-header">
+        <div class="challenge-title">CHALLENGE 5</div>
+        <button class="challenge-close" id="challenge2mCloseBtn">✕</button>
+      </div>
+      <div class="challenge-body">
+        <div class="challenge-text">
+          Get into a stranger's car 🚗
+        </div>
+        <div style="margin-top:6px;display:flex;justify-content:center;">
+          <img src="challenge5-2m.gif" alt="Challenge 5 - Get into a stranger's car"
+               style="max-width:100%;border-radius:12px;">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 3M Challenge -->
+  <div class="challenge-overlay" id="challenge3mOverlay">
+    <div class="challenge-modal">
+      <div class="challenge-header">
+        <div class="challenge-title">CHALLENGE 6</div>
+        <button class="challenge-close" id="challenge3mCloseBtn">✕</button>
+      </div>
+      <div class="challenge-body">
+        <div class="challenge-text">
+          10k TikTok edit contest 🎬✨
+        </div>
+        <div style="margin-top:6px;display:flex;justify-content:center;">
+          <img src="challenge6-3m.gif" alt="Challenge 6 - 10k TikTok edit contest"
+               style="max-width:100%;border-radius:12px;">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 5M Challenge -->
+  <div class="challenge-overlay" id="challenge5mOverlay">
+    <div class="challenge-modal">
+      <div class="challenge-header">
+        <div class="challenge-title">CHALLENGE 7</div>
+        <button class="challenge-close" id="challenge5mCloseBtn">✕</button>
+      </div>
+      <div class="challenge-body">
+        <div class="challenge-text">
+          Human Pacman in a market 🟡👻
+        </div>
+        <div style="margin-top:6px;display:flex;justify-content:center;">
+          <img src="challenge7-5m.gif" alt="Challenge 7 - Human Pacman in a market"
                style="max-width:100%;border-radius:12px;">
         </div>
       </div>
@@ -550,13 +645,19 @@
     </div>
   </div>
 
-  <!-- SONS -->
+
+  <!-- AUDIO FILES -->
   <audio id="explosionSound" src="explosion.mp3" preload="auto"></audio>
   <audio id="bgMusic" src="background.mp3" loop preload="auto"></audio>
   <audio id="snowSound" src="snow.mp3" loop preload="auto"></audio>
   <audio id="challenge50kSound" src="challenge-50k.mp3" loop preload="auto"></audio>
   <audio id="challenge100kSound" src="challenge-100k.mp3" loop preload="auto"></audio>
   <audio id="challenge500kSound" src="challenge-500k.mp3" loop preload="auto"></audio>
+  <audio id="challenge800kSound" src="challenge-800k.mp3" loop preload="auto"></audio>
+  <audio id="challenge1mSound" src="challenge-500k.mp3" loop preload="auto"></audio>
+  <audio id="challenge2mSound" src="challenge-2m.mp3" loop preload="auto"></audio>
+  <audio id="challenge3mSound" src="challenge-3m.mp3" loop preload="auto"></audio>
+  <audio id="challenge5mSound" src="challenge-5m.mp3" loop preload="auto"></audio>
   <audio id="comingSound" src="coming-soon.mp3" loop preload="auto"></audio>
   <audio id="casinoSound" src="casino.mp3" loop preload="auto"></audio>
 
@@ -576,6 +677,11 @@
     const challenge50kSound = document.getElementById('challenge50kSound');
     const challenge100kSound = document.getElementById('challenge100kSound');
     const challenge500kSound = document.getElementById('challenge500kSound');
+    const challenge800kSound = document.getElementById('challenge800kSound');
+    const challenge1mSound = document.getElementById('challenge1mSound');
+    const challenge2mSound = document.getElementById('challenge2mSound');
+    const challenge3mSound = document.getElementById('challenge3mSound');
+    const challenge5mSound = document.getElementById('challenge5mSound');
     const comingSound = document.getElementById('comingSound');
     const casinoSound = document.getElementById('casinoSound');
 
@@ -587,13 +693,23 @@
     const challenge100kCloseBtn = document.getElementById('challenge100kCloseBtn');
     const challenge500kOverlay = document.getElementById('challenge500kOverlay');
     const challenge500kCloseBtn = document.getElementById('challenge500kCloseBtn');
+    const challenge800kOverlay = document.getElementById('challenge800kOverlay');
+    const challenge800kCloseBtn = document.getElementById('challenge800kCloseBtn');
+    const challenge1mOverlay = document.getElementById('challenge1mOverlay');
+    const challenge1mCloseBtn = document.getElementById('challenge1mCloseBtn');
+    const challenge2mOverlay = document.getElementById('challenge2mOverlay');
+    const challenge2mCloseBtn = document.getElementById('challenge2mCloseBtn');
+    const challenge3mOverlay = document.getElementById('challenge3mOverlay');
+    const challenge3mCloseBtn = document.getElementById('challenge3mCloseBtn');
+    const challenge5mOverlay = document.getElementById('challenge5mOverlay');
+    const challenge5mCloseBtn = document.getElementById('challenge5mCloseBtn');
     const comingOverlay = document.getElementById('comingOverlay');
     const comingCloseBtn = document.getElementById('comingCloseBtn');
     const casinoOverlay = document.getElementById('casinoOverlay');
     const casinoCloseBtn = document.getElementById('casinoCloseBtn');
 
     function pauseAllSpecialSounds(){
-      [snowSound,challenge50kSound,challenge100kSound,challenge500kSound,comingSound,casinoSound]
+      [snowSound,challenge50kSound,challenge100kSound,challenge500kSound,challenge800kSound,challenge1mSound,challenge2mSound,challenge3mSound,challenge5mSound,comingSound,casinoSound]
         .forEach(s=>s && s.pause());
     }
 
@@ -632,6 +748,31 @@
     challenge500kCloseBtn.addEventListener('click', closeChallenge500k);
     challenge500kOverlay.addEventListener('click', e=>{ if(e.target===challenge500kOverlay) closeChallenge500k(); });
 
+    function openChallenge800k(){ openOverlayWithSound(challenge800kOverlay, challenge800kSound); }
+    function closeChallenge800k(){ closeOverlayWithSound(challenge800kOverlay, challenge800kSound); }
+    challenge800kCloseBtn.addEventListener('click', closeChallenge800k);
+    challenge800kOverlay.addEventListener('click', e=>{ if(e.target===challenge800kOverlay) closeChallenge800k(); });
+
+    function openChallenge1m(){ openOverlayWithSound(challenge1mOverlay, challenge1mSound); }
+    function closeChallenge1m(){ closeOverlayWithSound(challenge1mOverlay, challenge1mSound); }
+    challenge1mCloseBtn.addEventListener('click', closeChallenge1m);
+    challenge1mOverlay.addEventListener('click', e=>{ if(e.target===challenge1mOverlay) closeChallenge1m(); });
+
+    function openChallenge2m(){ openOverlayWithSound(challenge2mOverlay, challenge2mSound); }
+    function closeChallenge2m(){ closeOverlayWithSound(challenge2mOverlay, challenge2mSound); }
+    challenge2mCloseBtn.addEventListener('click', closeChallenge2m);
+    challenge2mOverlay.addEventListener('click', e=>{ if(e.target===challenge2mOverlay) closeChallenge2m(); });
+
+    function openChallenge3m(){ openOverlayWithSound(challenge3mOverlay, challenge3mSound); }
+    function closeChallenge3m(){ closeOverlayWithSound(challenge3mOverlay, challenge3mSound); }
+    challenge3mCloseBtn.addEventListener('click', closeChallenge3m);
+    challenge3mOverlay.addEventListener('click', e=>{ if(e.target===challenge3mOverlay) closeChallenge3m(); });
+
+    function openChallenge5m(){ openOverlayWithSound(challenge5mOverlay, challenge5mSound); }
+    function closeChallenge5m(){ closeOverlayWithSound(challenge5mOverlay, challenge5mSound); }
+    challenge5mCloseBtn.addEventListener('click', closeChallenge5m);
+    challenge5mOverlay.addEventListener('click', e=>{ if(e.target===challenge5mOverlay) closeChallenge5m(); });
+
     function openComing(){ openOverlayWithSound(comingOverlay, comingSound); }
     function closeComing(){ closeOverlayWithSound(comingOverlay, comingSound); }
     comingCloseBtn.addEventListener('click', closeComing);
@@ -655,7 +796,9 @@
       { label:'$50K',  radius:24, x:180,  y:250, color:palette.purple, cluster:'pair1'},
       { label:'$100K', radius:29, x:280,  y:280, color:palette.purple, cluster:'pair1'},
       { label:'$500K', radius:32, x:450,  y:200, color:palette.pink,   cluster:'pair2'},
-      { label:'$1M',   radius:36, x:580,  y:240, color:palette.pink,   cluster:'pair2'},
+      { label:'$800K', radius:35, x:580,  y:180, color:palette.pink,   cluster:'pair2'},
+      { label:'$1M',   radius:36, x:700,  y:240, color:palette.pink,   cluster:'pair2'},
+      { label:'$2M',   radius:38, x:820,  y:280, color:palette.pink,   cluster:'pair2'},
       { label:'$3M',   radius:40, x:500,  y:400, color:palette.green,  cluster:'pair3'},
       { label:'$5M',   radius:44, x:650,  y:420, color:palette.green,  cluster:'pair3'},
       { label:'$7M',   radius:48, x:580,  y:540, color:palette.green,  cluster:'pair3'},
@@ -666,7 +809,7 @@
       { label:'$60M',  radius:68, x:900,  y:600, color:palette.teal,   cluster:'pair6'},
       { label:'$100M', radius:72, x:1100, y:650, color:palette.teal,   cluster:'pair6'},
       { label:'', radius:55, x:650, y:230, color:['#e5f2ff','#93c5fd','#1e293b'], cluster:'snow'},
-      { label:'CA',    radius:48, x:720,  y:320, color:['#4ADE80','#22C55E','#FFFFFF'], cluster:'ca'},
+      { label:'CA', radius:48, x:720, y:320, color:['#EF4444','#DC2626','#7F1D1D'], cluster:'ca'},
       { label:'ABOUT', radius:50, x:350,  y:360, color:['#0f172a','#020617','#000000'], cluster:'bomb'},
       { label:'', radius:45, x:980, y:520, color:palette.cyan, cluster:'coming'},
       { label:'', radius:50, x:1150, y:300, color:palette.pink, cluster:'casino'}
@@ -674,11 +817,11 @@
 
     const connections = [
       [0, 1],
-      [2, 3],
-      [4, 5], [5, 6],
-      [7, 8],
+      [2, 3], [3, 4], [4, 5],
+      [6, 7], [7, 8],
       [9, 10],
-      [11, 12]
+      [11, 12],
+      [13, 14]
     ].map(([a, b]) => ({
       a,
       b,
@@ -1119,11 +1262,26 @@
       const bubble50k = mainBubbles.find(b=>b.label === '$50K');
       if(bubble50k && bubble50k.contains(mx,my)){openChallenge50k();return;}
 
+      const bubble100k = mainBubbles.find(b=>b.label === '$100K');
+      if(bubble100k && bubble100k.contains(mx,my)){openChallenge100k();return;}
+
       const bubble500k = mainBubbles.find(b=>b.label === '$500K');
       if(bubble500k && bubble500k.contains(mx,my)){openChallenge500k();return;}
 
-      const bubble100k = mainBubbles.find(b=>b.label === '$100K');
-      if(bubble100k && bubble100k.contains(mx,my)){openChallenge100k();return;}
+      const bubble800k = mainBubbles.find(b=>b.label === '$800K');
+      if(bubble800k && bubble800k.contains(mx,my)){openChallenge800k();return;}
+
+      const bubble1m = mainBubbles.find(b=>b.label === '$1M');
+      if(bubble1m && bubble1m.contains(mx,my)){openChallenge1m();return;}
+
+      const bubble2m = mainBubbles.find(b=>b.label === '$2M');
+      if(bubble2m && bubble2m.contains(mx,my)){openChallenge2m();return;}
+
+      const bubble3m = mainBubbles.find(b=>b.label === '$3M');
+      if(bubble3m && bubble3m.contains(mx,my)){openChallenge3m();return;}
+
+      const bubble5m = mainBubbles.find(b=>b.label === '$5M');
+      if(bubble5m && bubble5m.contains(mx,my)){openChallenge5m();return;}
 
       const comingBubble = mainBubbles.find(b=>b.cluster === 'coming');
       if(comingBubble && comingBubble.contains(mx,my)){openComing();return;}
@@ -1486,9 +1644,6 @@
           const r=Math.random();
           let s1,s2,s3,winMsg=null;
 
-          // 0.4%  -> 1 SOL (777)
-          // 2%    -> 0.3 SOL (BAR BAR BAR)
-          // 5%    -> 0.1 SOL (BELL BELL BELL)
           if(r<0.004){
             s1=s2=s3='7';
             winMsg='GG YOU WIN 1 SOL MAKE A SCREEN AND SEND IT IN COMMUNITY';
@@ -1531,4 +1686,7 @@
     });
   </script>
 </body>
-</html>
+</html>eel">
+                <div class="slot-symbol" id="reel1"><span class="bell">🔔</span></div>
+              </div>
+              <div class="slot-r
