--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
           CHALLENGE 4: Making a party in a subway 🪩
         </div>
         <div style="margin-top:6px;display:flex;justify-content:center;">
-          <img src="challenge4-1M.gif" alt="Challenge 4 - Making a party in a subway"
+          <img src="challenge4-1m.gif" alt="Challenge 4 - Making a party in a subway"
                style="max-width:100%;border-radius:12px;">
         </div>
       </div>
