--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
           Human Pacman in a market 🟡👻
         </div>
         <div style="margin-top:6px;display:flex;justify-content:center;">
-          <img src="challenge7-5m.gif" alt="Challenge 7 - Human Pacman in a market"
+          <img src="challenge7-5m.jpg" alt="Challenge 7 - Human Pacman in a market"
                style="max-width:100%;border-radius:12px;">
         </div>
       </div>
