--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
           Explosif cocktail 🍹💥
         </div>
         <div style="margin-top:6px;display:flex;justify-content:center;">
-          <img src="challenge3-800k.gif" alt="Challenge 3 - Explosif cocktail"
+          <img src="challenge3-800k.jpg" alt="Challenge 3 - Explosif cocktail"
                style="max-width:100%;border-radius:12px;">
         </div>
       </div>
