--- a/index.html
+++ b/index.html
@@ -632,9 +632,7 @@
             </div>
           </div>
           <div class="slot-bottom-label">
-            3x 7 = 1 SOL (screen & send in community)<br>
-            3x BAR = 0.3 SOL (screen & send in community)<br>
-            3x 🔔 = 0.1 SOL (screen & send in community)
+            Mistery
           </div>
 
           <button class="slot-btn" id="slotSpinBtn">Spin</button>
