--- a/index.html
+++ b/index.html
@@ -301,19 +301,36 @@
     }
 
     @media(max-width:768px){
-      nav{padding:15px 20px;}
-      .logo{font-size:24px;}
-      .eiffel-tower{width:22px;height:38px;}
-      .social-link{width:32px;height:32px;}
-      .social-icon,.social-img{width:22px;height:22px;}
-      .about-modal{max-width:90vw;max-height:75vh;padding:18px 18px;}
-      .volume-slider{width:80px;}
-      .game-modal,.challenge-modal,.coming-modal,.casino-modal{width:90vw;}
-      .slot-reel{width:64px;height:88px;}
-      .slot-symbol span{font-size:34px;}
-      .countdown-timer{padding:4px 8px;font-size:11px;}
-      .countdown-timer svg{width:14px;height:14px;margin-right:4px;}
-    }
+  nav{padding:15px 10px;}
+  .logo{font-size:20px;}
+  .eiffel-tower{width:20px;height:36px;}
+  .right-section{gap:8px;}
+  .socials{gap:8px;}
+  .social-link{width:32px;height:32px;}
+  .social-icon,.social-img{width:18px;height:18px;}
+  .about-modal{max-width:90vw;max-height:75vh;padding:18px 18px;}
+  
+  /* Timer plus compact */
+  .countdown-timer{
+    padding:4px 6px;
+    font-size:11px;
+  }
+  .countdown-timer svg{
+    width:12px;height:12px;
+    margin-right:3px;
+  }
+  
+  /* Volume plus compact */
+  .volume-control{
+    padding:4px 6px;
+  }
+  .volume-slider{width:60px;}
+  .volume-icon{width:14px;height:14px;}
+  
+  .game-modal,.challenge-modal,.coming-modal,.casino-modal{width:90vw;}
+  .slot-reel{width:64px;height:88px;}
+  .slot-symbol span{font-size:34px;}
+}
   </style>
 </head>
 <body>
