--- a/index.html
+++ b/index.html
@@ -308,11 +308,13 @@
   .socials{gap:8px;}
   .social-link{width:32px;height:32px;}
   .social-icon,.social-img{width:18px;height:18px;}
-  .about-modal{max-width:90vw;max-height:75vh;padding:18px 18px;}
   
-  /* Timer plus compact */
+  /* MASQUER le volume sur mobile */
+  .volume-control{display:none;}
+  
+  /* Timer compact */
   .countdown-timer{
-    padding:4px 6px;
+    padding:4px 8px;
     font-size:11px;
   }
   .countdown-timer svg{
@@ -320,13 +322,7 @@
     margin-right:3px;
   }
   
-  /* Volume plus compact */
-  .volume-control{
-    padding:4px 6px;
-  }
-  .volume-slider{width:60px;}
-  .volume-icon{width:14px;height:14px;}
-  
+  .about-modal{max-width:90vw;max-height:75vh;padding:18px 18px;}
   .game-modal,.challenge-modal,.coming-modal,.casino-modal{width:90vw;}
   .slot-reel{width:64px;height:88px;}
   .slot-symbol span{font-size:34px;}
