--- a/index.html
+++ b/index.html
@@ -61,14 +61,21 @@
   display:flex;align-items:center;
   padding:4px 12px;border-radius:999px;
   background:rgba(15,23,42,0.85);
-  border:1px solid rgba(148,163,184,0.4);
+  border:1px solid rgba(239,68,68,0.6);
   font-size:13px;
-  color:#e5e7eb;
-  font-weight:600;
+  color:#ef4444;
+  font-weight:700;
   letter-spacing:0.5px;
   font-variant-numeric:tabular-nums;
+  text-shadow:0 0 10px rgba(239,68,68,0.8), 
+              0 0 20px rgba(239,68,68,0.5),
+              0 0 30px rgba(239,68,68,0.3);
+  box-shadow:0 0 15px rgba(239,68,68,0.4),
+             inset 0 0 10px rgba(239,68,68,0.1);
 }
-
+.countdown-timer svg{
+  filter:drop-shadow(0 0 8px rgba(239,68,68,0.7));
+}
     #canvas-container{width:100%;height:100vh;position:relative;}
     canvas{display:block;cursor:grab;}
     canvas:active{cursor:grabbing;}
