--- a/index.html
+++ b/index.html
@@ -104,13 +104,17 @@
     .snow-modal,
     .game-modal,
     .challenge-modal,
-    .coming-modal,
     .casino-modal{
-      background:radial-gradient(circle at top,#111827,#020617);
-      border-radius:18px;
-      border:1px solid rgba(148,163,184,0.55);
-      box-shadow:0 18px 45px rgba(0,0,0,0.8);
-      color:#e5e7eb;
+      width:min(520px,92vw);
+      padding:18px 18px 20px;
+      display:flex;flex-direction:column;gap:10px;
+    }
+
+    .coming-modal{
+      width:min(900px,95vw);
+      max-width:900px;
+      padding:18px 18px 20px;
+      display:flex;flex-direction:column;gap:10px;
     }
 
     .about-modal{
@@ -330,7 +334,9 @@
   }
   
   .about-modal{max-width:90vw;max-height:75vh;padding:18px 18px;}
-  .game-modal,.challenge-modal,.coming-modal,.casino-modal{width:90vw;}
+  .game-modal,.challenge-modal,.casino-modal{width:90vw;}
+  .coming-modal{width:90vw;max-width:90vw;}
+  .coming-modal iframe{height:400px !important;}
   .slot-reel{width:64px;height:88px;}
   .slot-symbol span{font-size:34px;}
 }
@@ -629,20 +635,21 @@
     </div>
   </div>
 
-  <!-- COMING SOON modal -->
+  <!-- DEXSCREENER CHART modal -->
 <div class="coming-overlay" id="comingOverlay">
   <div class="coming-modal">
     <div class="coming-header">
-      <div class="coming-title">COMING SOON</div>
+      <div class="coming-title">Live Chart - DexScreener</div>
       <button class="coming-close" id="comingCloseBtn">✕</button>
     </div>
     <div class="coming-body">
-      <div class="coming-text">
-        COMING SOON!
-      </div>
-      <div style="margin-top:6px;display:flex;justify-content:center;">
-        <img src="coming-soon.png" alt="Coming soon"
-             style="max-width:100%;border-radius:12px;">
+      <div style="margin-top:6px;width:100%;height:500px;border-radius:12px;overflow:hidden;">
+        <iframe 
+          id="dexscreenerChart"
+          src="https://dexscreener.com/solana/darfmbcqmskci5quybe62xfjtpduekdngng6nzdcz91j?embed=1&theme=dark&trades=0&info=0"
+          style="width:100%;height:100%;border:none;border-radius:12px;"
+          allowfullscreen>
+        </iframe>
       </div>
     </div>
   </div>
