--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
       </div>
       <div class="casino-body">
         <div class="casino-text">
-          Play to get rewarded only if you are holders (proof needed to get rewarded).
+          Play Casino to wait the livestream .
         </div>
         <div class="slot-shell">
           <div class="slot-top">CASINO</div>
